--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-        <title>Spring Boot File Upload / Download Rest API Example</title>
+        <title>Video Metadata</title>
         <link rel="stylesheet" href="/css/main.css" />
     </head>
     <body>
@@ -15,7 +15,7 @@
             </div>
             <div class="upload-content">
                 <div class="single-upload">
-                    <h3>Upload Single File</h3>
+                    <h3>Upload Single Video File</h3>
                     <form id="singleUploadForm" name="singleUploadForm">
                         <input id="singleFileUploadInput" type="file" name="file" class="file-input" required />
                         <button type="submit" class="primary submit-btn">Submit</button>
