--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,8 @@
                     </div>
                     <div class="upload-response">
                         <div id="singleFileUploadError"></div>
+                        <div id="singleFileInOut"></div>
+                        <div id="singleFileOutOut"></div>
                         <div id="singleFileUploadSuccess"></div>
                     </div>
                 </div>
